fixes in schemas fixes in roles fixes in endpoints added default admin seeder added Operation Success Pipe with Result class

--- a/apps/api/ng-reports.config.json
+++ b/apps/api/ng-reports.config.json
@@ -11,6 +11,10 @@
     "privateKeyPath": "",
     "certPath": ""
   },
+  "defaultAdmin": {
+    "username": "admin",
+    "password": "admin"
+  },
   "jwt": {
     "secret": "TEMPORARY_SECRET_LATER_INSERT_SOMETHING_HERE_123!@#",
     "expiresInMinutes": 10
