fixes in ui and API fixes in auth added refresh token logic added universal types for API requests updated swagger

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -22,7 +22,10 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@ng-reports/shared-types": ["../../packages/shared-types/src/index.ts"]
-    }
+      "@ng-reports/shared-types": [
+        "../../packages/shared-types/src/index.ts"
+      ]
+    },
+    "noImplicitOverride": false
   }
 }
