--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -33,7 +33,8 @@
     "@angular/router": "^21.0.0",
     "@ng-reports/shared-types": "workspace:*",
     "@primeng/themes": "^21.0.2",
-    "chart.js": "^4.5.1",
+    "apexcharts": "^5.3.6",
+    "ng-apexcharts": "^2.0.4",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^21.0.2",
