--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:clean": "rm -rf build && turbo run clean",
     "db:up": "sh ./scripts/start-mongo.sh",
     "install:server": "sh ./scripts/install.sh",
-    "swagger": "cd scripts && java -jar swagger-codegen-cli.jar generate -l typescript-angular -i ../apps/api/swagger.json -o ../apps/client/src/app/core/swagger"
+    "swagger": "cd scripts && java -jar swagger-codegen-cli.jar generate -l typescript-angular -i ../apps/api/swagger.json -o ../apps/client/src/app/core/swagger",
+    "pack:lib": "sh ./scripts/pack-ng-reports.sh"
   },
   "keywords": [],
   "author": "",
