--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -40,7 +40,8 @@
     "primeicons": "^7.0.0",
     "primeng": "^21.0.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "ng-reports-form": "../../releases/ng-reports-0.0.3.tgz"
   },
   "devDependencies": {
     "@angular/build": "^21.0.2",
