added AiService added AI auto-summary and auto-severity added AI summary comment request added AI Summary request button added rx-queue.ts added AI account generation updated API

--- a/apps/api/ng-reports.config.json
+++ b/apps/api/ng-reports.config.json
@@ -19,5 +19,8 @@
     "secret": "TEMPORARY_SECRET_LATER_INSERT_SOMETHING_HERE_123!@#",
     "expiresInMinutes": 10
   },
-  "googleAPI": {}
+  "googleAPI": {
+    "generativeAiKey": "",
+    "model": "gemini-3-flash-preview"
+  }
 }
