added developers resource to API changed ng reports library build output directory added developer guide page updated API

--- a/apps/client/angular.json
+++ b/apps/client/angular.json
@@ -105,5 +105,16 @@
         }
       }
     }
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "standalone": true,
+      "type": "component",
+      "changeDetection": "OnPush",
+      "viewEncapsulation": "None"
+    },
+    "@schematics/angular:service": {
+      "type": "service"
+    }
   }
 }
