--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,17 +31,19 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@codemirror/basic-setup": "^0.20.0",
     "@ng-reports/shared-types": "workspace:*",
     "@primeng/themes": "^21.0.2",
+    "@robotcoral/ngx-codemirror6": "^0.0.5",
     "apexcharts": "^5.3.6",
     "jimp": "^1.6.0",
     "ng-apexcharts": "^2.0.4",
+    "ng-reports-form": "../api/lib-releases/ng-reports-0.0.3.tgz",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^21.0.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "ng-reports-form": "../../releases/ng-reports-0.0.3.tgz"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.2",
