--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,6 +1,11 @@
 {
   "name": "client",
   "version": "0.0.0",
+  "license": "CC BY-NC-ND 4.0",
+  "author": {
+    "name": "Mateusz Bilicz",
+    "url": "https://mateuszbilicz.pl/"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
