--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,9 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": [
+        "^build"
+      ],
       "outputs": [
         "dist/**",
         "../../build/api/**",
@@ -14,6 +16,11 @@
       "cache": false,
       "persistent": true
     },
-    "test": {}
+    "test": {
+      "cache": false,
+      "dependsOn": [
+        "^test"
+      ]
+    }
   }
 }
