--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "types": "src/index.ts",
-  "scripts": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
