--- a/turbo.json
+++ b/turbo.json
@@ -2,9 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
+      "dependsOn": ["^build"],
       "outputs": [
         "dist/**",
         "../../build/api/**",
@@ -16,11 +14,6 @@
       "cache": false,
       "persistent": true
     },
-    "test": {
-      "cache": false,
-      "dependsOn": [
-        "^test"
-      ]
-    }
+    "test": {}
   }
 }
