--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,7 +12,7 @@
     "start:dev": "ng serve --port 4201",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "vitest run"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -35,7 +35,6 @@
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
-    "@angular/platform-browser-dynamic": "^21.1.4",
     "@angular/router": "^21.0.0",
     "@ng-reports/shared-types": "workspace:*",
     "@primeng/themes": "^21.0.2",
@@ -50,15 +49,12 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@analogjs/vite-plugin-angular": "^2.2.3",
     "@angular/build": "^21.0.2",
     "@angular/cli": "^21.0.2",
     "@angular/compiler-cli": "^21.0.0",
-    "baseline-browser-mapping": "^2.9.19",
     "jsdom": "^27.1.0",
     "ng-packagr": "^21.0.0",
     "typescript": "~5.9.2",
-    "vite": "^7.3.1",
     "vitest": "^4.0.8"
   }
 }
